--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
+    "react-gif-player": "^0.4.2",
     "react-redux": "^7.1.1",
     "react-redux-loading": "^1.0.1",
     "react-router-dom": "^5.1.2",
