--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,6 +12,7 @@ Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.3
 Flask-WTF==0.14.3
 future==0.18.2
+gunicorn==20.0.4
 isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.11.2
